--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,12 +1,14 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<title>Simple Brunch TypeScript Demo</title>
+    <meta charset="utf-8">
+    <title>Simple Brunch TypeScript Demo</title>
 </head>
 
 <body>
-	<script src="app.js"></script>
+    <div id="greeting">The original Greeting</div>
+    <div data-bind="text:greetMessage" id="boundgreeting">Original Greeting to be data-bound.</div>
+    <script src="app.js"></script>
 </body>
 
 </html>
