--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,8 +6,14 @@
 </head>
 
 <body>
+    <!-- The component-space is needed to perform a global ko.applyBindings() without affecting the stuff done in the boundgreeting demo -->
+    <div id="component-space">
+        <my-component></my-component>
+    </div>
+
     <div id="greeting">The original Greeting</div>
     <div data-bind="text:greetMessage" id="boundgreeting">Original Greeting to be data-bound.</div>
+
     <script src="app.js"></script>
 </body>
 
